--- a/src/main/resources/templates/sheetmap/list.html
+++ b/src/main/resources/templates/sheetmap/list.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<th:block th:replace="~{/layout/basic :: setContent(~{this::content} )}">
-
-    <h1>  kakaomap </h1>
-
-
-</th:block>
+<body>
+1234
+</body>
+</html>
