sheetmap 20220612 지도연동완료, PNU생성완료, 토지이음링크완료

--- a/src/main/resources/templates/layout/basic.html
+++ b/src/main/resources/templates/layout/basic.html
@@ -18,14 +18,14 @@
 <div class="d-flex" id="wrapper">
     <!-- Sidebar-->
     <div class="border-end bg-white" id="sidebar-wrapper">
-        <div class="sidebar-heading border-bottom bg-light">Start Bootstrap</div>
+        <div class="sidebar-heading border-bottom bg-light">[해밀]</div>
         <div class="list-group list-group-flush">
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Dashboard</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Shortcuts</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Overview</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Events</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Profile</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Status</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4construction">MAP건축할토지</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4agriculture">MAP농사용토지</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/woodland">MAP임야만</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4landlocked">MAP맹지만</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4detachedhouse">MAP단독주택</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4construction">MAP ALL</a>
         </div>
     </div>
     <!-- Page content wrapper-->
