--- a/src/main/resources/templates/guestbook/BAK/bak_map.html
+++ b/src/main/resources/templates/guestbook/BAK/bak_map.html
@@ -59,11 +59,11 @@
 
                 // 일반 지도와 스카이뷰로 지도 타입을 전환할 수 있는 지도타입 컨트롤을 생성합니다
                 var mapTypeControl = new kakao.maps.MapTypeControl();
-                map.addControl(mapTypeControl, kakao.maps.ControlPosition.TOPRIGHT);
+                bak_map.addControl(mapTypeControl, kakao.maps.ControlPosition.TOPRIGHT);
 
                 // 지도 확대 축소를 제어할 수 있는  줌 컨트롤을 생성합니다
                 var zoomControl = new kakao.maps.ZoomControl();
-                map.addControl(zoomControl, kakao.maps.ControlPosition.RIGHT);
+                bak_map.addControl(zoomControl, kakao.maps.ControlPosition.RIGHT);
 
 
                 // 로드뷰 처리
@@ -103,7 +103,7 @@
                     console.log("addressname : " + latlng[2]);
 
                     var marker = new daum.maps.Marker({
-                        map: map, // 마커를 표시할 지도
+                        map: bak_map, // 마커를 표시할 지도
                         //position: new daum.maps.LatLng(33.2605331, 126.571985, 15), // 마커를 표시할 위치
                         position: new daum.maps.LatLng(Number(latlng[0]), Number(latlng[1]), 5), // 마커를 표시할 위치
                         title: String(latlng[2])
@@ -120,7 +120,7 @@
                     });
 
                     // 마커 위에 인포윈도우를 표시합니다. 두번째 파라미터인 marker를 넣어주지 않으면 지도 위에 표시됩니다
-                    infowindow.open(map, marker);
+                    infowindow.open(bak_map, marker);
 
                 });
 
