--- a/src/main/resources/templates/layout/basic.html
+++ b/src/main/resources/templates/layout/basic.html
@@ -29,7 +29,8 @@
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4pubhouse">매매_공동주택</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4flatswithshop">매매_상가주택</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4rentshop">임대차_상가점포</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4renthouse">임대차_주거용</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4renthouse">전세_주거</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4renthousemy">년월세_주거</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3">================</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4constructionend">완료매매_건축할토지</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4agricultureend">완료매매_농사할토지</a>
@@ -38,7 +39,8 @@
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4pubhouseend">완료매매_공동주택</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4flatswithshopend">완료매매_상가주택</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4rentshopend">완료임대차_상가점포</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4renthouse">완료임대차_주거용</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4renthouseend">완료전세_주거</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4renthousemyend">완료년월세_주거</a>
 
         </div>
     </div>
